// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOverlineColor renders 0 1`] = `
Array [
  .c0 {
  text-overline-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders function 1`] = `
Array [
  .c0 {
  text-overline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders invalid theme path 1`] = `
Array [
  .c0 {
  text-overline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders negative number 1`] = `
Array [
  .c0 {
  text-overline-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-overline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-overline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-overline-color: July;
  }
}

@media April {
  .c0 {
    text-overline-color: August;
  }
}

@media January {
  .c0 {
    text-overline-color: September;
  }
}

@media April {
  .c0 {
    text-overline-color: November;
  }
}

@media June {
  .c0 {
    text-overline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-overline-color: July;
  }
}

@media April {
  .c0 {
    text-overline-color: August;
  }
}

@media January {
  .c0 {
    text-overline-color: September;
  }
}

@media April {
  .c0 {
    text-overline-color: November;
  }
}

@media June {
  .c0 {
    text-overline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-color: January;
  }
}

@media April {
  .c0 {
    text-overline-color: December;
  }
}

@media January {
  .c0 {
    text-overline-color: April;
  }
}

@media April {
  .c0 {
    text-overline-color: May;
  }
}

@media June {
  .c0 {
    text-overline-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-color: January;
  }
}

@media April {
  .c0 {
    text-overline-color: December;
  }
}

@media January {
  .c0 {
    text-overline-color: April;
  }
}

@media April {
  .c0 {
    text-overline-color: May;
  }
}

@media June {
  .c0 {
    text-overline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders postitive number 1`] = `
Array [
  .c0 {
  text-overline-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders string 1`] = `
Array [
  .c0 {
  text-overline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineColor renders valid theme path 1`] = `
Array [
  .c0 {
  text-overline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
